Use experiment id for evaluation id in Dashboard rows
Signed-off-by: Alexey Rodriguez Yakushev <alexey.rodriguez@gmail.com>